--- a/fade.html
+++ b/fade.html
@@ -6,7 +6,7 @@ div{
     width:100px;
     background-color:green;
     position:relative;
-    animation-name:example;
+    animation-name:koustav;
     animation-delay:2s;
     animation-duration:5s; 
     animation-iteration-count: infinite;
@@ -16,7 +16,7 @@ div{
     text-align: center;
 }
 
-@keyframes example{
+@keyframes koustav{
     0% {background-color:green; top:0px; left:0px;}
     25% {background-color:orange; top:0px;  left:300px;}
     50% {background-color:blue; top:300px; left:300px; }
